refactor: rename Dto field to align with ContractDefinition (#3087)
