# resources/openapi/openapi.yaml
@@ -522,270 +522,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DataPlaneInstance'
-  /policydefinitions:
-    get:
-      tags:
-      - Policy
-      description: Returns all policy definitions according to a query
-      operationId: getAllPolicies
-      parameters:
-      - name: offset
-        in: query
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: integer
-          format: int32
-          example: null
-      - name: limit
-        in: query
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: integer
-          format: int32
-          example: null
-      - name: sort
-        in: query
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-          example: null
-          enum:
-          - ASC
-          - DESC
-      - name: sortField
-        in: query
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-          example: null
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                type: array
-                example: null
-                items:
-                  $ref: '#/components/schemas/PolicyDefinitionResponseDto'
-        "400":
-          description: Request was malformed
-          content:
-            application/json:
-              schema:
-                type: array
-                example: null
-                items:
-                  $ref: '#/components/schemas/ApiErrorDetail'
-      deprecated: true
-    post:
-      tags:
-      - Policy
-      description: Creates a new policy definition
-      operationId: createPolicy
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/PolicyDefinitionRequestDto'
-      responses:
-        "200":
-          description: policy definition was created successfully. Returns the Policy
-            Definition Id and created timestamp
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/IdResponseDto'
-        "400":
-          description: Request body was malformed
-          content:
-            application/json:
-              schema:
-                type: array
-                example: null
-                items:
-                  $ref: '#/components/schemas/ApiErrorDetail'
-        "409":
-          description: "Could not create policy definition, because a contract definition\
-            \ with that ID already exists"
-          content:
-            application/json:
-              schema:
-                type: array
-                example: null
-                items:
-                  $ref: '#/components/schemas/ApiErrorDetail'
-      deprecated: true
-  /policydefinitions/request:
-    post:
-      tags:
-      - Policy
-      description: Returns all policy definitions according to a query
-      operationId: queryAllPolicies
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/QuerySpecDto'
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                type: array
-                example: null
-                items:
-                  $ref: '#/components/schemas/PolicyDefinitionResponseDto'
-        "400":
-          description: Request was malformed
-          content:
-            application/json:
-              schema:
-                type: array
-                example: null
-                items:
-                  $ref: '#/components/schemas/ApiErrorDetail'
-      deprecated: true
-  /policydefinitions/{id}:
-    get:
-      tags:
-      - Policy
-      description: Gets a policy definition with the given ID
-      operationId: getPolicy
-      parameters:
-      - name: id
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
-          example: null
-      responses:
-        "200":
-          description: The  policy definition
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PolicyDefinitionResponseDto'
-        "400":
-          description: "Request was malformed, e.g. id was null"
-          content:
-            application/json:
-              schema:
-                type: array
-                example: null
-                items:
-                  $ref: '#/components/schemas/ApiErrorDetail'
-        "404":
-          description: An  policy definition with the given ID does not exist
-          content:
-            application/json:
-              schema:
-                type: array
-                example: null
-                items:
-                  $ref: '#/components/schemas/ApiErrorDetail'
-      deprecated: true
-    delete:
-      tags:
-      - Policy
-      description: "Removes a policy definition with the given ID if possible. Deleting\
-        \ a policy definition is only possible if that policy definition is not yet\
-        \ referenced by a contract definition, in which case an error is returned.\
-        \ DANGER ZONE: Note that deleting policy definitions can have unexpected results,\
-        \ do this at your own risk!"
-      operationId: deletePolicy
-      parameters:
-      - name: id
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
-          example: null
-      responses:
-        "200":
-          description: Policy definition was deleted successfully
-        "400":
-          description: "Request was malformed, e.g. id was null"
-          content:
-            application/json:
-              schema:
-                type: array
-                example: null
-                items:
-                  $ref: '#/components/schemas/ApiErrorDetail'
-        "404":
-          description: An policy definition with the given ID does not exist
-          content:
-            application/json:
-              schema:
-                type: array
-                example: null
-                items:
-                  $ref: '#/components/schemas/ApiErrorDetail'
-        "409":
-          description: "The policy definition cannot be deleted, because it is referenced\
-            \ by a contract definition"
-          content:
-            application/json:
-              schema:
-                type: array
-                example: null
-                items:
-                  $ref: '#/components/schemas/ApiErrorDetail'
-      deprecated: true
-  /policydefinitions/{policyId}:
-    put:
-      tags:
-      - Policy
-      description: "Updates an existing Policy, If the Policy is not found, an error\
-        \ is reported"
-      operationId: updatePolicy
-      parameters:
-      - name: policyId
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
-          example: null
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/PolicyDefinitionUpdateDto'
-      responses:
-        "200":
-          description: policy definition was updated successfully. Returns the Policy
-            Definition Id and updated timestamp
-        "400":
-          description: Request body was malformed
-          content:
-            application/json:
-              schema:
-                type: array
-                example: null
-                items:
-                  $ref: '#/components/schemas/ApiErrorDetail'
-        "404":
-          description: "policy definition could not be updated, because it does not\
-            \ exists"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiErrorDetail'
-      deprecated: true
   /token:
     get:
       tags:
@@ -2476,7 +2212,7 @@ components:
       required:
       - accessPolicyId
       - contractPolicyId
-      - criteria
+      - selectorExpression
       type: object
       properties:
         '@context':
@@ -2494,7 +2230,7 @@ components:
         contractPolicyId:
           type: string
           example: null
-        criteria:
+        selectorExpression:
           type: array
           example: null
           items:
@@ -2522,7 +2258,7 @@ components:
           type: integer
           format: int64
           example: null
-        criteria:
+        selectorExpression:
           type: array
           example: null
           items:
